deploy: 95badeee62e9b63341fbbb4bb376f45ec7ef930e

--- a/apis/api/openapi/invitations.yml
+++ b/apis/api/openapi/invitations.yml
@@ -47,7 +47,7 @@ paths:
         "401":
           description: Missing or invalid access token provided.
         "404":
-          description: A non-existent entity request.          
+          description: A non-existent entity request.
         "409":
           description: Failed due to using an existing identity.
         "415":
@@ -111,7 +111,7 @@ paths:
         "401":
           description: Missing or invalid access token provided.
         "404":
-          description: A non-existent entity request.          
+          description: A non-existent entity request.
         "500":
           $ref: "#/components/responses/ServiceError"
 
@@ -197,8 +197,9 @@ components:
           enum:
             - administrator
             - editor
-            - viewer
+            - contributor
             - member
+            - guest
             - domain
             - parent_group
             - role_group
@@ -238,8 +239,9 @@ components:
           enum:
             - administrator
             - editor
-            - viewer
+            - contributor
             - member
+            - guest
             - domain
             - parent_group
             - role_group
@@ -406,8 +408,9 @@ components:
         enum:
           - administrator
           - editor
-          - viewer
+          - contributor
           - member
+          - guest
           - domain
           - parent_group
           - role_group
