--- a/apis/api/openapi/things.yml
+++ b/apis/api/openapi/things.yml
@@ -57,6 +57,8 @@ paths:
           description: Missing or invalid access token provided.
         "403":
           description: Failed to perform authorization over the entity.
+        "404":
+          description: A non-existent entity request.
         "409":
           description: Failed due to using an existing identity.
         "415":
@@ -94,7 +96,7 @@ paths:
           description: |
             Missing or invalid access token provided.
         "403":
-          description: Failed to perform authorization over the entity.            
+          description: Failed to perform authorization over the entity.
         "404":
           description: A non-existent entity request.
         "422":
@@ -122,6 +124,8 @@ paths:
           description: Missing or invalid access token provided.
         "403":
           description: Failed to perform authorization over the entity.
+        "404":          
+          description: A non-existent entity request.
         "415":
           description: Missing or invalid content type.
         "422":
@@ -182,7 +186,7 @@ paths:
         "404":
           description: Failed due to non existing thing.
         "409":
-          description: Failed due to using an existing identity.          
+          description: Failed due to using an existing identity.
         "415":
           description: Missing or invalid content type.
         "422":
@@ -207,6 +211,8 @@ paths:
           description: Missing or invalid access token provided.
         "403":
           description: Unauthorized access to thing id.
+        "404":
+          description: Missing thing.
         "500":
           $ref: "#/components/responses/ServiceError"
   /things/{thingID}/tags:
@@ -299,7 +305,7 @@ paths:
         "404":
           description: A non-existent entity request.
         "409":
-          description: Failed due to already disabled thing.             
+          description: Failed due to already disabled thing.
         "422":
           description: Database can't process request.
         "500":
@@ -329,7 +335,7 @@ paths:
         "404":
           description: A non-existent entity request.
         "409":
-          description: Failed due to already enabled thing.          
+          description: Failed due to already enabled thing.
         "422":
           description: Database can't process request.
         "500":
@@ -446,6 +452,8 @@ paths:
           description: Missing or invalid access token provided.
         "403":
           description: Failed to perform authorization over the entity.
+        "404":
+          descripttion: A non-existent entity request.
         "409":
           description: Failed due to using an existing identity.
         "415":
@@ -568,6 +576,8 @@ paths:
           description: Missing or invalid access token provided.
         "403":
           description: Unauthorized access to thing id.
+        "404":
+          descripttion: A non-existent entity request.
         "500":
           $ref: "#/components/responses/ServiceError"
 
@@ -595,7 +605,7 @@ paths:
         "404":
           description: A non-existent entity request.
         "409":
-          description: Failed due to already enabled channel.             
+          description: Failed due to already enabled channel.
         "422":
           description: Database can't process request.
         "500":
@@ -625,7 +635,7 @@ paths:
         "404":
           description: A non-existent entity request.
         "409":
-          description: Failed due to already disabled channel.             
+          description: Failed due to already disabled channel.
         "422":
           description: Database can't process request.
         "500":
