--- a/apis/api/openapi/auth.yml
+++ b/apis/api/openapi/auth.yml
@@ -99,10 +99,10 @@ paths:
       responses:
         "200":
           $ref: "#/components/responses/DomainRes"
+        "400":
+          description: Failed due to malformed query parameters.
         "401":
           description: Missing or invalid access token provided.
-        "403":
-          description: Failed to perform authorization over the entity.
         "404":
           description: A non-existent entity request.
         "422":
@@ -152,8 +152,12 @@ paths:
       responses:
         "200":
           $ref: "#/components/responses/DomainPermissionRes"
+        "400":
+          description: Malformed entity specification.
         "401":
           description: Missing or invalid access token provided.
+        "403":
+          description: Failed authorization over the domain.
         "404":
           description: A non-existent entity request.
         "422":
@@ -286,7 +290,7 @@ paths:
       security:
         - bearerAuth: []
       responses:
-        "200":
+        "204":
           description: Users successfully unassigned from domain.
         "400":
           description: Failed due to malformed domain's ID.
@@ -318,6 +322,8 @@ paths:
           description: Issued new key.
         "400":
           description: Failed due to malformed JSON.
+        "401":
+          description: Missing or invalid access token provided.
         "409":
           description: Failed due to using already existing ID.
         "415":
@@ -411,6 +417,8 @@ paths:
           description: Policies deleted.
         "400":
           description: Failed due to malformed JSON.
+        "401":
+          description: Missing or invalid access token provided.          
         "404":
           description: A non-existent entity request.
         "409":
@@ -605,7 +613,7 @@ components:
     UserDomainRelationReq:
       type: object
       properties:
-        users_ids:
+        user_ids:
           type: array
           minItems: 1
           items:
@@ -618,11 +626,11 @@ components:
             ]
         relation:
           type: string
-          enum: ["administrator", "editor", "viewer", "member"]
+          enum: ["administrator", "editor", "contributor", "member", "guest"]
           example: "administrator"
           description: Policy relations.
       required:
-        - users_ids
+        - user_ids
         - relation
     Key:
       type: object
