--- a/apis/api/openapi/invitations.yml
+++ b/apis/api/openapi/invitations.yml
@@ -27,7 +27,7 @@ tags:
       url: https://docs.magistrala.abstractmachines.fr/
 
 paths:
-  /invitations:
+  /{domainID}/invitations:
     post:
       operationId: sendInvitation
       tags:
@@ -35,6 +35,8 @@ paths:
       summary: Send invitation
       description: |
         Send invitation to user to join domain.
+      parameters:
+        - $ref: "auth.yml#/components/parameters/DomainID"
       requestBody:
         $ref: "#/components/requestBodies/SendInvitationReq"
       security:
@@ -46,6 +48,8 @@ paths:
           description: Failed due to malformed JSON.
         "401":
           description: Missing or invalid access token provided.
+        "403":
+          description: Unauthorized access to the domain ID.
         "404":
           description: A non-existent entity request.
         "409":
@@ -70,7 +74,7 @@ paths:
         - $ref: "#/components/parameters/Offset"
         - $ref: "#/components/parameters/UserID"
         - $ref: "#/components/parameters/InvitedBy"
-        - $ref: "#/components/parameters/DomainID"
+        - $ref: "auth.yml#/components/parameters/DomainID"
         - $ref: "#/components/parameters/Relation"
         - $ref: "#/components/parameters/State"
       security:
@@ -84,6 +88,8 @@ paths:
           description: |
             Missing or invalid access token provided.
             This endpoint is available only for administrators.
+        "403":
+          description: Unauthorized access to the domain ID.
         "404":
           description: A non-existent entity request.
         "422":
@@ -91,7 +97,7 @@ paths:
         "500":
           $ref: "#/components/responses/ServiceError"
 
-  /invitations/accept:
+  /{domainID}/invitations/accept:
     post:
       operationId: acceptInvitation
       summary: Accept invitation
@@ -101,10 +107,10 @@ paths:
         - Invitations
       security:
         - bearerAuth: []
-      requestBody:
-        $ref: "#/components/requestBodies/AcceptInvitationReq"
+      parameters:
+        - $ref: "auth.yml#/components/parameters/DomainID"
       responses:
-        "200":
+        "204":
           description: Invitation accepted.
         "400":
           description: Failed due to malformed query parameters.
@@ -112,10 +118,38 @@ paths:
           description: Missing or invalid access token provided.
         "404":
           description: A non-existent entity request.
+        "415":
+          description: Missing or invalid content type.
         "500":
           $ref: "#/components/responses/ServiceError"
 
-  /invitations/{user_id}/{domain_id}:
+  /{domainID}/invitations/reject:
+    post:
+      operationId: rejectInvitation
+      summary: Reject invitation
+      description: |
+        Current logged in user rejects invitation to join domain.
+      tags:
+        - Invitations
+      security:
+        - bearerAuth: []
+      parameters:
+        - $ref: "auth.yml#/components/parameters/DomainID"
+      responses:
+        "204":
+          description: Invitation rejected.
+        "400":
+          description: Failed due to malformed query parameters.
+        "401":
+          description: Missing or invalid access token provided.
+        "404":
+          description: A non-existent entity request.
+        "415":
+          description: Missing or invalid content type.
+        "500":
+          $ref: "#/components/responses/ServiceError"
+
+  /{domainID}/invitations/users/{user_id}:
     get:
       operationId: getInvitation
       summary: Retrieves a specific invitation
@@ -125,7 +159,7 @@ paths:
         - Invitations
       parameters:
         - $ref: "#/components/parameters/user_id"
-        - $ref: "#/components/parameters/domain_id"
+        - $ref: "auth.yml#/components/parameters/DomainID"
       security:
         - bearerAuth: []
       responses:
@@ -135,8 +169,12 @@ paths:
           description: Failed due to malformed query parameters.
         "401":
           description: Missing or invalid access token provided.
+        "403":
+          description: Unauthorized access to the domain ID.
         "404":
           description: A non-existent entity request.
+        "415":
+          description: Missing or invalid content type.
         "422":
           description: Database can't process request.
         "500":
@@ -151,7 +189,7 @@ paths:
         - Invitations
       parameters:
         - $ref: "#/components/parameters/user_id"
-        - $ref: "#/components/parameters/domain_id"
+        - $ref: "auth.yml#/components/parameters/DomainID"
       security:
         - bearerAuth: []
       responses:
@@ -159,10 +197,14 @@ paths:
           description: Invitation deleted.
         "400":
           description: Failed due to malformed JSON.
+        "403":
+          description: Unauthorized access to the domain ID.
         "404":
           description: Failed due to non existing user.
         "401":
           description: Missing or invalid access token provided.
+        "415":
+          description: Missing or invalid content type.
         "500":
           $ref: "#/components/responses/ServiceError"
 
@@ -188,11 +230,6 @@ components:
           format: uuid
           example: bb7edb32-2eac-4aad-aebe-ed96fe073879
           description: User unique identifier.
-        domain_id:
-          type: string
-          format: uuid
-          example: bb7edb32-2eac-4aad-aebe-ed96fe073879
-          description: Domain unique identifier.
         relation:
           type: string
           enum:
@@ -214,7 +251,6 @@ components:
           description: Resend invitation.
       required:
         - user_id
-        - domain_id
         - relation
 
     Invitation:
@@ -370,26 +406,6 @@ components:
       required: true
       example: bb7edb32-2eac-4aad-aebe-ed96fe073879
 
-    DomainID:
-      name: domain_id
-      description: Unique identifier for a domain.
-      in: query
-      schema:
-        type: string
-        format: uuid
-      required: false
-      example: bb7edb32-2eac-4aad-aebe-ed96fe073879
-
-    domain_id:
-      name: domain_id
-      description: Unique identifier for a domain.
-      in: path
-      schema:
-        type: string
-        format: uuid
-      required: true
-      example: bb7edb32-2eac-4aad-aebe-ed96fe073879
-
     InvitedBy:
       name: invited_by
       description: Unique identifier for a user that invited the user.
@@ -442,22 +458,6 @@ components:
           schema:
             $ref: "#/components/schemas/SendInvitationReqObj"
 
-    AcceptInvitationReq:
-      description: JSON-formatted document describing request for accepting invitation
-      required: true
-      content:
-        application/json:
-          schema:
-            type: object
-            properties:
-              domain_id:
-                type: string
-                format: uuid
-                example: bb7edb32-2eac-4aad-aebe-ed96fe073879
-                description: Domain unique identifier.
-            required:
-              - domain_id
-
   responses:
     InvitationRes:
       description: Data retrieved.
@@ -470,7 +470,6 @@ components:
           operationId: deleteInvitation
           parameters:
             user_id: $response.body#/user_id
-            domain_id: $response.body#/domain_id
 
     InvitationPageRes:
       description: Data retrieved.
