deploy: 0d126c3be042f8a2b03066340ab15824cb8c5229

--- a/apis/api/openapi/certs.yml
+++ b/apis/api/openapi/certs.yml
@@ -3,17 +3,17 @@
 
 openapi: 3.0.1
 info:
-  title: Magistrala Certs service
+  title: SuperMQ Certs service
   description: |
     HTTP API for Certs service
     Some useful links:
-    - [The Magistrala repository](https://github.com/absmach/magistrala)
+    - [The SuperMQ repository](https://github.com/absmach/supermq)
   contact:
     email: info@abstractmachines.fr
   license:
     name: Apache 2.0
-    url: https://github.com/absmach/magistrala/blob/main/LICENSE
-  version: 0.14.0
+    url: https://github.com/absmach/supermq/blob/main/LICENSE
+  version: 0.15.1
 
 servers:
   - url: http://localhost:9019
@@ -24,7 +24,7 @@ tags:
     description: Everything about your Certs
     externalDocs:
       description: Find out more about certs
-      url: https://docs.magistrala.abstractmachines.fr/
+      url: https://docs.supermq.abstractmachines.fr/
 
 paths:
   /{domainID}/certs:
@@ -53,6 +53,7 @@ paths:
           description: Database can't process request.
         "500":
           $ref: "#/components/responses/ServiceError"
+
   /{domainID}/certs/{certID}:
     get:
       operationId: getCert
@@ -106,6 +107,7 @@ paths:
           description: Database can't process request.
         "500":
           $ref: "#/components/responses/ServiceError"
+
   /{domainID}/serials/{clientID}:
     get:
       operationId: getSerials
@@ -133,6 +135,7 @@ paths:
           description: Database can't process request.
         "500":
           $ref: "#/components/responses/ServiceError"
+
   /health:
     get:
       summary: Retrieves service health check info.
@@ -171,7 +174,7 @@ components:
         client_id:
           type: string
           format: uuid
-          description: Corresponding Magistrala Client ID.
+          description: Corresponding SuperMQ Client ID.
         client_cert:
           type: string
           description: Client Certificate.
@@ -299,7 +302,7 @@ components:
       content:
         application/health+json:
           schema:
-            $ref: "./schemas/HealthInfo.yml"
+            $ref: "./schemas/health_info.yml"
 
   securitySchemes:
     bearerAuth:
