--- a/apis/api/openapi/bootstrap.yml
+++ b/apis/api/openapi/bootstrap.yml
@@ -3,17 +3,17 @@
 
 openapi: 3.0.1
 info:
-  title: Magistrala Bootstrap service
+  title: SuperMQ Bootstrap service
   description: |
     HTTP API for managing platform clients configuration.
     Some useful links:
-    - [The Magistrala repository](https://github.com/absmach/magistrala)
+    - [The SuperMQ repository](https://github.com/absmach/supermq)
   contact:
     email: info@abstractmachines.fr
   license:
     name: Apache 2.0
-    url: https://github.com/absmach/magistrala/blob/main/LICENSE
-  version: 0.14.0
+    url: https://github.com/absmach/supermq/blob/main/LICENSE
+  version: 0.15.1
 
 servers:
   - url: http://localhost:9013
@@ -24,7 +24,7 @@ tags:
     description: Everything about your Configs
     externalDocs:
       description: Find out more about Configs
-      url: https://docs.magistrala.abstractmachines.fr/
+      url: https://docs.supermq.abstractmachines.fr/
 
 paths:
   /{domainID}/clients/configs:
@@ -88,6 +88,7 @@ paths:
           description: Database can't process request.
         "500":
           $ref: "#/components/responses/ServiceError"
+
   /{domainID}/clients/configs/{configId}:
     get:
       operationId: getConfig
@@ -118,7 +119,7 @@ paths:
       description: |
         Update is performed by replacing the current resource data with values
         provided in a request payload. Note that the owner, ID, external ID,
-        external key, Magistrala Client ID and key cannot be changed.
+        external key, SuperMQ Client ID and key cannot be changed.
       tags:
         - configs
       parameters:
@@ -148,7 +149,7 @@ paths:
       summary: Removes a Config
       description: |
         Removes a Config. In case of successful removal the service will ensure
-        that the removed config is disconnected from all of the Magistrala channels.
+        that the removed config is disconnected from all of the SuperMQ channels.
       tags:
         - configs
       parameters:
@@ -167,6 +168,7 @@ paths:
           description: Database can't process request.
         "500":
           $ref: "#/components/responses/ServiceError"
+
   /{domainID}/clients/configs/certs/{configId}:
     patch:
       operationId: updateConfigCerts
@@ -199,6 +201,7 @@ paths:
           description: Database can't process request.
         "500":
           $ref: "#/components/responses/ServiceError"
+
   /{domainID}/clients/configs/connections/{configId}:
     put:
       operationId: updateConfigConnections
@@ -230,6 +233,7 @@ paths:
           description: Database can't process request.
         "500":
           $ref: "#/components/responses/ServiceError"
+
   /clients/bootstrap/{externalId}:
     get:
       operationId: getBootstrapConfig
@@ -255,6 +259,7 @@ paths:
           description: Database can't process request.
         "500":
           $ref: "#/components/responses/ServiceError"
+
   /clients/bootstrap/secure/{externalId}:
     get:
       operationId: getSecureBootstrapConfig
@@ -281,13 +286,14 @@ paths:
           description: Database can't process request.
         "500":
           $ref: "#/components/responses/ServiceError"
+
   /{domainID}/clients/state/{configId}:
     put:
       operationId: updateConfigState
       summary: Updates Config state.
       description: |
         Updating state represents enabling/disabling Config, i.e. connecting
-        and disconnecting corresponding Magistrala Client to the list of Channels.
+        and disconnecting corresponding SuperMQ Client to the list of Channels.
       tags:
         - configs
       parameters:
@@ -310,6 +316,7 @@ paths:
           description: Database can't process request.
         "500":
           $ref: "#/components/responses/ServiceError"
+          
   /health:
     get:
       summary: Retrieves service health check info.
@@ -333,11 +340,11 @@ components:
         client_id:
           type: string
           format: uuid
-          description: Corresponding Magistrala Client ID.
+          description: Corresponding SuperMQ Client ID.
         magistrala_secret:
           type: string
           format: uuid
-          description: Corresponding Magistrala Client key.
+          description: Corresponding SuperMQ Client key.
         channels:
           type: array
           minItems: 0
@@ -405,11 +412,11 @@ components:
         client_id:
           type: string
           format: uuid
-          description: Corresponding Magistrala Client ID.
+          description: Corresponding SuperMQ Client ID.
         client_key:
           type: string
           format: uuid
-          description: Corresponding Magistrala Client key.
+          description: Corresponding SuperMQ Client key.
         channels:
           type: array
           minItems: 0
@@ -421,12 +428,6 @@ components:
         client_cert:
           type: string
           description: Client certificate.
-        client_key:
-          type: string
-          description: Key for the client_cert.
-        ca_cert:
-          type: string
-          description: Issuing CA certificate.
       required:
         - client_id
         - client_key
@@ -438,7 +439,7 @@ components:
         client_id:
           type: string
           format: uuid
-          description: Corresponding Magistrala Client ID.
+          description: Corresponding SuperMQ Client ID.
         client_cert:
           type: string
           description: Client certificate.
@@ -522,7 +523,7 @@ components:
               client_id:
                 type: string
                 format: uuid
-                description: ID of the corresponding Magistrala Client.
+                description: ID of the corresponding SuperMQ Client.
               channels:
                 type: array
                 minItems: 0
@@ -652,7 +653,7 @@ components:
       content:
         application/health+json:
           schema:
-            $ref: "./schemas/HealthInfo.yml"
+            $ref: "./schemas/health_info.yml"
     ConfigUpdateCertsRes:
       description: Data retrieved. Config certs updated.
       content:
