--- a/apis/api/openapi/http.yml
+++ b/apis/api/openapi/http.yml
@@ -3,17 +3,17 @@
 
 openapi: 3.0.1
 info:
-  title: Magistrala http adapter
+  title: SuperMQ http adapter
   description: |
     HTTP API for sending messages through communication channels.
     Some useful links:
-    - [The Magistrala repository](https://github.com/absmach/magistrala)
+    - [The SuperMQ repository](https://github.com/absmach/supermq)
   contact:
     email: info@abstractmachines.fr
   license:
     name: Apache 2.0
-    url: https://github.com/absmach/magistrala/blob/main/LICENSE
-  version: 0.14.0
+    url: https://github.com/absmach/supermq/blob/main/LICENSE
+  version: 0.15.1
 
 servers:
   - url: http://localhost:8008
@@ -24,7 +24,7 @@ tags:
     description: Everything about your Messages
     externalDocs:
       description: Find out more about messages
-      url: https://docs.magistrala.abstractmachines.fr/
+      url: https://docs.supermq.abstractmachines.fr/
 
 paths:
   /channels/{id}/messages:
@@ -161,7 +161,7 @@ components:
       content:
         application/health+json:
           schema:
-            $ref: "./schemas/HealthInfo.yml"
+            $ref: "./schemas/health_info.yml"
 
   securitySchemes:
     bearerAuth:
