--- a/apis/api/openapi/readers.yml
+++ b/apis/api/openapi/readers.yml
@@ -3,17 +3,17 @@
 
 openapi: 3.0.1
 info:
-  title: Magistrala reader service
+  title: SuperMQ reader service
   description: |
     HTTP API for reading messages.
     Some useful links:
-    - [The Magistrala repository](https://github.com/absmach/magistrala)
+    - [The SuperMQ repository](https://github.com/absmach/supermq)
   contact:
     email: info@abstractmachines.fr
   license:
     name: Apache 2.0
-    url: https://github.com/absmach/magistrala/blob/main/LICENSE
-  version: 0.14.0
+    url: https://github.com/absmach/supermq/blob/main/LICENSE
+  version: 0.15.1
 
 servers:
   - url: http://localhost:9003
@@ -32,10 +32,10 @@ tags:
     description: Everything about your Readers
     externalDocs:
       description: Find out more about readers
-      url: https://docs.magistrala.abstractmachines.fr/
+      url: https://docs.supermq.abstractmachines.fr/
 
 paths:
-  /{domainID}/channels/{chanId}/messages:
+  /channels/{chanId}/messages:
     get:
       operationId: getMessages
       summary: Retrieves messages sent to single channel
@@ -47,7 +47,6 @@ paths:
       tags:
         - readers
       parameters:
-        - $ref: "#/components/parameters/DomainID"
         - $ref: "#/components/parameters/ChanId"
         - $ref: "#/components/parameters/Limit"
         - $ref: "#/components/parameters/Offset"
@@ -292,7 +291,7 @@ components:
       content:
         application/health+json:
           schema:
-            $ref: "./schemas/HealthInfo.yml"
+            $ref: "./schemas/health_info.yml"
 
   securitySchemes:
     bearerAuth:
