--- a/clients.yaml
+++ b/clients.yaml
@@ -1282,16 +1282,12 @@ components:
 
     Tags:
       name: tags
-      description: Client tags.
+      description: Clients tags. Multiple tags can be specified separated by comma for OR condition and hyphen for AND condition.
       in: query
       schema:
-        type: array
-        minItems: 0
-        uniqueItems: true
-        items:
-          type: string
+        type: string
       required: false
-      example: ["yello", "orange"]
+      example: "orange,yellow"
 
     Metadata:
       name: metadata
